# libusb_uvc_debug

./: .gitignore  LIBUSB_EXAMPLES_EX.sh  LIBUVC_EXAMPLES_EX.sh  README.txt  V4L2_EXAMPLES_EX.sh  all.sh  build_kernel.sh  build_libusb.sh  cleanup.sh  ex_all.sh  ex_all_local.sh  libusb_build.sh  libusb_example6_c270.sh  libusb_example6_google.sh  libusb_example6_rally.sh  libusb_rebuild.sh  libuvc_build.sh  libuvc_example1_aver.sh  libuvc_example1_c270.sh  libuvc_example1_google.sh  libuvc_example1_rally.sh  libuvc_example2_c270.sh  libuvc_example3_c270.sh  libuvc_example4_c270.sh  libuvc_example5_c270.sh  libuvc_example6_c270.sh  libuvc_example7_c270.sh  libuvc_rebuild_local.sh  make_slice.sh  qemu_rebuild.sh  rebuild_libuvc_all.sh  rebuild_libuvc_local.sh  v4l2_example5_aver.sh  v4l2_example5_c270.sh  v4l2_example5_google.sh  v4l2_example5_rally.sh
host/: host_experiment.sh  rebuild_kernel.sh  trace_events.txt  usb2sys.sh  usb_device_cam.xml  usb_device_rally_cam.xml
host/guest/: 1ex.sh  libuvc_example1_c270.sh  v4l2_example5_c270.sh
host/reattach_usb_host/: Readme.txt  usb_controller_hotplug.sh
host/usb_controller_hotplug/: assign_pc_usb.sh  assign_teams_usb.sh  assign_zoom_usb.sh  dell_4350_usb_controller.xml  device.xml
libusb/libusb/: core.c  io.c
libusb_examples/1/: CMakeLists.txt  example.c
libusb_examples/2/: CMakeLists.txt  example.c
libusb_examples/2/cmake/: FindLlibUSB1.cmake
libusb_examples/3/: example.c
libusb_examples/4/: example.c
libusb_examples/5/: example.c
libusb_examples/6/: example.c
libuvc_debug/: CMakeLists.txt
(+17 files in other folders)
